objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Annual_Contract_Value__c</fullName>
        <description>This field takes the opportunity amount as a sum of opportunity products priced at monthly rates to calculate an annualized contract value.</description>
        <formula>Amount * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value assumes your opportunity line items state prices at monthly subscription rates for a quantity of users.</inlineHelpText>
        <label>Annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BOSS_Order_URL__c</fullName>
        <label>BOSS Order URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Channel_Order_Type__c</fullName>
        <label>Channel Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelation Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade - Partner App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade = Ord Edition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Customer_Accepted_SFDC_Svc_Agrmnt__c</fullName>
        <label>Date Customer Accepted SFDC Svc Agrmnt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Partner_Received_Customer_Order__c</fullName>
        <label>Date Partner Received Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_To_Expiration__c</fullName>
        <formula>License__r.sfLma__Expiration__c - TODAY()</formula>
        <label>Days To Expiration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Install_Date__c</fullName>
        <formula>License__r.sfLma__Install_Date__c</formula>
        <label>License Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_OrgID__c</fullName>
        <formula>License__r.sfLma__Subscriber_Org_ID__c</formula>
        <label>License OrgID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Seat_Count__c</fullName>
        <formula>License__r.sfLma__Licensed_Seats__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Seat Count</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Status__c</fullName>
        <formula>TEXT(License__r.sfLma__Status__c)</formula>
        <label>License Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <referenceTo>sfLma__License__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Months_to_Expiration__c</fullName>
        <formula>MONTH( License__r.sfLma__Expiration__c) - MONTH(TODAY())</formula>
        <label>Months to Expiration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_s_Salesforce_Seat_Count__c</fullName>
        <label>Org&apos;s Salesforce Seat Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Version__c</fullName>
        <description>License Package Version</description>
        <formula>License__r.sfLma__Package_Version__c</formula>
        <label>Package Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contract_Terms__c</fullName>
        <label>Partner Contract Terms</label>
        <referenceTo>CHANNEL_ORDERS__Partner_Contract_Terms__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity__c</fullName>
        <description>A lookup to the renewal opportunity created for this opportunity. This is created for ISV opportunities by the related renewalOpportunityCreation process and createISVRenewalOpportunity flow.</description>
        <inlineHelpText>This is the renewal opportunity created automatically for this ISV opportunity when the stage is set to &apos;Closed-Won.&apos;</inlineHelpText>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Edition__c</fullName>
        <formula>License__r.sfLma__Org_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Edition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox__c</fullName>
        <formula>License__r.sfLma__Is_Sandbox__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sandbox?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Order_URL__c</fullName>
        <label>Service Order URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Used_Licenses__c</fullName>
        <formula>License__r.sfLma__Used_Licenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Used Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_to_Expiration__c</fullName>
        <formula>YEAR( License__r.sfLma__Expiration__c) - YEAR(TODAY())</formula>
        <label>Years to Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>